# assembler

./: pyproject.toml
monistode_assembler/: assemble.py  cli.py  command.py  command_description.py  description.py  disassemble.py  disassemble_text.py  exceptions.py  parse.py
monistode_assembler/arguments/: __init__.py  address.py  common.py  immediate.py  label.py  matching_parser.py  padding.py  regiser.py  register_address.py  register_address_offset.py  register_offset.py  string.py
monistode_assembler/sections/: __init__.py  common.py  data.py  data_argument.py  text.py  text_argument.py
