[tool.poetry]
name = "monistode-assembler"
version = "0.1.15"
description = "An assembler for the Monistode set of ISA's"
authors = ["rizerphe <44440399+rizerphe@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "monistode_assembler"}]

[tool.poetry.dependencies]
python = "^3.11"
monistode-binutils-shared = "^0.1.15"
pydantic = "^2.4.2"
pyyaml = "^6.0.1"
clck = "^1.0.0"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mstasdas = 'monistode_assembler.cli:main'
mstas = 'monistode_assembler.cli:assemble'
mstdas = 'monistode_assembler.cli:disassemble'
